@@ -62,6 +62,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.in.www1.artemis.assessment.ComplaintUtilService;
 import de.tum.in.www1.artemis.competency.CompetencyUtilService;
+import de.tum.in.www1.artemis.competency.PrerequisiteUtilService;
 import de.tum.in.www1.artemis.config.Constants;
 import de.tum.in.www1.artemis.domain.Complaint;
 import de.tum.in.www1.artemis.domain.ComplaintResponse;
@@ -80,6 +81,7 @@ import de.tum.in.www1.artemis.domain.TextExercise;
 import de.tum.in.www1.artemis.domain.TextSubmission;
 import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.competency.Competency;
+import de.tum.in.www1.artemis.domain.competency.Prerequisite;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.ComplaintType;
 import de.tum.in.www1.artemis.domain.enumeration.CourseInformationSharingConfiguration;
@@ -272,6 +274,9 @@ public class CourseTestService {
     private CompetencyUtilService competencyUtilService;
 
     @Autowired
+    private PrerequisiteUtilService prerequisiteUtilService;
+
+    @Autowired
     private LectureUtilService lectureUtilService;
 
     @Autowired
@@ -301,13 +306,13 @@ public class CourseTestService {
     @Autowired
     private PageableSearchUtilService pageableSearchUtilService;
 
-    private static final int numberOfStudents = 8;
+    private static final int NUMBER_OF_STUDENTS = 8;
 
-    private static final int numberOfTutors = 5;
+    private static final int NUMBER_OF_TUTORS = 5;
 
-    private static final int numberOfEditors = 1;
+    private static final int NUMBER_OF_EDITORS = 1;
 
-    private static final int numberOfInstructors = 1;
+    private static final int NUMBER_OF_INSTRUCTORS = 1;
 
     private MockDelegate mockDelegate;
 
@@ -317,7 +322,7 @@ public class CourseTestService {
         this.userPrefix = userPrefix;
         this.mockDelegate = mockDelegate;
 
-        userUtilService.addUsers(userPrefix, numberOfStudents, numberOfTutors, numberOfEditors, numberOfInstructors);
+        userUtilService.addUsers(userPrefix, NUMBER_OF_STUDENTS, NUMBER_OF_TUTORS, NUMBER_OF_EDITORS, NUMBER_OF_INSTRUCTORS);
 
         // Add users that are not in the course
         userUtilService.createAndSaveUser(userPrefix + "tutor6");
@@ -329,7 +334,7 @@ public class CourseTestService {
     }
 
     private void adjustUserGroupsToCustomGroups(String suffix) {
-        userUtilService.adjustUserGroupsToCustomGroups(userPrefix, suffix, numberOfStudents, numberOfTutors, numberOfEditors, numberOfInstructors);
+        userUtilService.adjustUserGroupsToCustomGroups(userPrefix, suffix, NUMBER_OF_STUDENTS, NUMBER_OF_TUTORS, NUMBER_OF_EDITORS, NUMBER_OF_INSTRUCTORS);
     }
 
     public void adjustUserGroupsToCustomGroups() {
@@ -523,7 +528,7 @@ public class CourseTestService {
         course3 = courseRepo.save(course3);
         courses.add(course3);
         addConversationsToCourse(course3);
-        examUtilService.addExamWithExerciseGroup(courses.get(0), true);
+        examUtilService.addExamWithExerciseGroup(courses.getFirst(), true);
         // mock certain requests
         for (Course course : courses) {
             if (course.getStudentGroupName().startsWith(ARTEMIS_GROUP_DEFAULT_PREFIX)) {
@@ -678,8 +683,8 @@ public class CourseTestService {
         course.setCompetencies(competencies);
         course = courseRepo.save(course);
 
-        Set<Competency> prerequisites = new HashSet<>();
-        prerequisites.add(competencyUtilService.createCompetency(courseUtilService.createCourse()));
+        Set<Prerequisite> prerequisites = new HashSet<>();
+        prerequisites.add(prerequisiteUtilService.createPrerequisite(course));
         course.setPrerequisites(prerequisites);
         course = courseRepo.save(course);
 
@@ -832,7 +837,7 @@ public class CourseTestService {
     // Test
     public void testGetCoursesWithQuizExercises() throws Exception {
         List<Course> coursesCreated = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, false, 0);
-        Course activeCourse = coursesCreated.get(0);
+        Course activeCourse = coursesCreated.getFirst();
         Course inactiveCourse = coursesCreated.get(1);
 
         List<Course> courses = request.getList("/api/courses/courses-with-quiz", HttpStatus.OK, Course.class);
@@ -851,8 +856,8 @@ public class CourseTestService {
 
     // Test
     public void testGetCourseForDashboard(boolean userRefresh) throws Exception {
-        List<Course> courses = courseUtilService.createCoursesWithExercisesAndLecturesAndLectureUnitsAndCompetencies(userPrefix, true, false, numberOfTutors);
-        CourseForDashboardDTO receivedCourseForDashboard = request.get("/api/courses/" + courses.get(0).getId() + "/for-dashboard?refresh=" + userRefresh, HttpStatus.OK,
+        List<Course> courses = courseUtilService.createCoursesWithExercisesAndLecturesAndLectureUnitsAndCompetencies(userPrefix, true, false, NUMBER_OF_TUTORS);
+        CourseForDashboardDTO receivedCourseForDashboard = request.get("/api/courses/" + courses.getFirst().getId() + "/for-dashboard?refresh=" + userRefresh, HttpStatus.OK,
                 CourseForDashboardDTO.class);
         Course receivedCourse = receivedCourseForDashboard.course();
 
@@ -868,7 +873,7 @@ public class CourseTestService {
         assertThat(receivedCourse.getTutorialGroupsConfiguration()).isNull();
 
         // Iterate over all exercises of the remaining course
-        for (Exercise exercise : courses.get(0).getExercises()) {
+        for (Exercise exercise : courses.getFirst().getExercises()) {
             // Test that the exercise does not have more than one participation.
             assertThat(exercise.getStudentParticipations()).as("At most one participation for exercise").hasSizeLessThanOrEqualTo(1);
             if (!exercise.getStudentParticipations().isEmpty()) {
@@ -894,19 +899,18 @@ public class CourseTestService {
     }
 
     private Course createCourseWithEnrollmentEnabled(boolean enrollmentEnabled) throws Exception {
-        List<Course> courses = courseUtilService.createCoursesWithExercisesAndLecturesAndLectureUnitsAndCompetencies(userPrefix, true, false, numberOfTutors);
-        Course course = courses.get(0);
+        List<Course> courses = courseUtilService.createCoursesWithExercisesAndLecturesAndLectureUnitsAndCompetencies(userPrefix, true, false, NUMBER_OF_TUTORS);
+        Course course = courses.getFirst();
         course.setEnrollmentEnabled(enrollmentEnabled);
         courseRepo.save(course);
         return course;
     }
 
-    private User removeAllGroupsFromStudent1() {
+    private void removeAllGroupsFromStudent1() {
         User student = userUtilService.getUserByLogin(userPrefix + "student1");
         // remove student from all courses so that they are not already enrolled
         student.setGroups(new HashSet<>());
         userRepo.save(student);
-        return student;
     }
 
     // Test
@@ -1067,7 +1071,7 @@ public class CourseTestService {
         String suffix = "getall";
         adjustUserGroupsToCustomGroups(suffix);
         // Note: with the suffix, we reduce the amount of courses loaded below to prevent test issues
-        List<Course> coursesCreated = lectureUtilService.createCoursesWithExercisesAndLecturesAndLectureUnits(userPrefix, true, false, numberOfTutors);
+        List<Course> coursesCreated = lectureUtilService.createCoursesWithExercisesAndLecturesAndLectureUnits(userPrefix, true, false, NUMBER_OF_TUTORS);
         for (var course : coursesCreated) {
             courseUtilService.updateCourseGroups(userPrefix, course, suffix);
         }
@@ -1076,7 +1080,7 @@ public class CourseTestService {
         var coursesForDashboard = request.get("/api/courses/for-dashboard", HttpStatus.OK, CoursesForDashboardDTO.class);
         List<Course> courses = coursesForDashboard.courses().stream().map(CourseForDashboardDTO::course).toList();
 
-        Course activeCourse = coursesCreated.get(0);
+        Course activeCourse = coursesCreated.getFirst();
         Course inactiveCourse = coursesCreated.get(1);
 
         // Test that the prepared inactive course was filtered out
@@ -1182,7 +1186,7 @@ public class CourseTestService {
     public void testGetAllCoursesWithUserStats() throws Exception {
         adjustUserGroupsToCustomGroups();
         List<Course> testCourses = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, false, 0);
-        Course course = testCourses.get(0);
+        Course course = testCourses.getFirst();
         course.setStudentGroupName(userPrefix + "student");
         course.setTeachingAssistantGroupName(userPrefix + "tutor");
         course.setInstructorGroupName(userPrefix + "instructor");
@@ -1194,9 +1198,9 @@ public class CourseTestService {
         assertThat(optionalCourse).as("Course is returned").isPresent();
         Course returnedCourse = optionalCourse.orElseThrow();
 
-        assertThat(returnedCourse.getNumberOfStudents()).isEqualTo(numberOfStudents);
-        assertThat(returnedCourse.getNumberOfTeachingAssistants()).isEqualTo(numberOfTutors);
-        assertThat(returnedCourse.getNumberOfInstructors()).isEqualTo(numberOfInstructors);
+        assertThat(returnedCourse.getNumberOfStudents()).isEqualTo(NUMBER_OF_STUDENTS);
+        assertThat(returnedCourse.getNumberOfTeachingAssistants()).isEqualTo(NUMBER_OF_TUTORS);
+        assertThat(returnedCourse.getNumberOfInstructors()).isEqualTo(NUMBER_OF_INSTRUCTORS);
     }
 
     // Test
@@ -1272,7 +1276,7 @@ public class CourseTestService {
             }
 
             StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-            long numberOfInTimeSubmissions = course.getId().equals(testCourses.get(0).getId()) ? 5 : 0; // course 1 has 5 submissions, course 2 has 0 submissions
+            long numberOfInTimeSubmissions = course.getId().equals(testCourses.getFirst().getId()) ? 5 : 0; // course 1 has 5 submissions, course 2 has 0 submissions
             assertThat(stats.getNumberOfSubmissions().inTime()).as("Number of in-time submissions is correct").isEqualTo(numberOfInTimeSubmissions);
             assertThat(stats.getNumberOfSubmissions().late()).as("Number of latte submissions is correct").isZero();
             assertThat(stats.getTotalNumberOfAssessments().inTime()).as("Number of in-time assessments is correct").isZero();
@@ -1285,7 +1289,7 @@ public class CourseTestService {
 
     // Tests that average rating and number of ratings are computed correctly in '/for-assessment-dashboard'
     public void testGetCourseForAssessmentDashboard_averageRatingComputedCorrectly() throws Exception {
-        var testCourse = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, true, 5).get(0);
+        var testCourse = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, true, 5).getFirst();
         var exercise = exerciseUtilService.getFirstExerciseWithType(testCourse, TextExercise.class);
 
         int[] ratings = { 3, 4, 5 };
@@ -1320,10 +1324,8 @@ public class CourseTestService {
     // Test
     public void testGetAllGroupsForAllCourses() throws Exception {
         Set<String> allGroups = new HashSet<>(request.getList("/api/admin/courses/groups", HttpStatus.OK, String.class));
-        courseRepo.findAll().stream().findAny().ifPresent(course -> {
-            assertThat(allGroups)
-                    .containsAll(List.of(course.getStudentGroupName(), course.getTeachingAssistantGroupName(), course.getEditorGroupName(), course.getInstructorGroupName()));
-        });
+        courseRepo.findAll().stream().findAny().ifPresent(course -> assertThat(allGroups)
+                .containsAll(List.of(course.getStudentGroupName(), course.getTeachingAssistantGroupName(), course.getEditorGroupName(), course.getInstructorGroupName())));
     }
 
     // Test
@@ -1335,15 +1337,15 @@ public class CourseTestService {
 
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
 
-        var currentTutorLeaderboard = stats.getTutorLeaderboardEntries().get(0);
-        assertThat(currentTutorLeaderboard.getNumberOfTutorComplaints()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfAcceptedComplaints()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfComplaintResponses()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfAnsweredMoreFeedbackRequests()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfTutorMoreFeedbackRequests()).isZero();
-        assertThat(currentTutorLeaderboard.getNumberOfAssessments()).isZero();
-        assertThat(currentTutorLeaderboard.getPoints()).isZero();
+        var currentTutorLeaderboard = stats.getTutorLeaderboardEntries().getFirst();
+        assertThat(currentTutorLeaderboard.numberOfTutorComplaints()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfAcceptedComplaints()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfComplaintResponses()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfTutorMoreFeedbackRequests()).isZero();
+        assertThat(currentTutorLeaderboard.numberOfAssessments()).isZero();
+        assertThat(currentTutorLeaderboard.points()).isZero();
     }
 
     // Test
@@ -1353,13 +1355,13 @@ public class CourseTestService {
         adjustUserGroupsToCustomGroups(suffix);
         Course testCourse = courseUtilService.addCourseWithExercisesAndSubmissions(userPrefix, suffix, 6, 4, 2, 0, true, 0, validModel);
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 2 submissions in 2 exercises. The second two only 2 in one exercise.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(2);
     }
 
     // Test
@@ -1369,23 +1371,23 @@ public class CourseTestService {
         adjustUserGroupsToCustomGroups(suffix);
         Course testCourse = courseUtilService.addCourseWithExercisesAndSubmissions(userPrefix, suffix, 6, 4, 4, 2, true, 0, validModel);
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 2 submissions in 2 exercises. The second two only 2 in one exercise.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(4);
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfTutorComplaints()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfTutorComplaints()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfTutorComplaints()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfTutorComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfTutorComplaints()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfTutorComplaints()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfTutorComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfTutorComplaints()).isEqualTo(2);
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.get(1).numberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.get(2).numberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.get(3).numberOfNotAnsweredMoreFeedbackRequests()).isZero();
     }
 
     // Test
@@ -1395,23 +1397,23 @@ public class CourseTestService {
         adjustUserGroupsToCustomGroups(suffix);
         Course testCourse = courseUtilService.addCourseWithExercisesAndSubmissions(userPrefix, suffix, 6, 4, 4, 2, false, 0, validModel);
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 2 submissions in 2 exercises. The second two only 2 in one exercise.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(4);
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfTutorComplaints()).isZero();
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfTutorComplaints()).isZero();
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfTutorComplaints()).isZero();
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.get(1).numberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.get(2).numberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.get(3).numberOfTutorComplaints()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
     }
 
     // Test
@@ -1424,32 +1426,32 @@ public class CourseTestService {
         Course testCourse = courseUtilService.addCourseWithExercisesAndSubmissions(userPrefix, suffix, 6, 4, 4, 2, true, 1, validModel);
 
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 2 submissions in 2 exercises. The second two only 2 in one exercise.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAssessments()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAssessments()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfTutorComplaints()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfTutorComplaints()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfTutorComplaints()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfTutorComplaints()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfTutorComplaints()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfTutorComplaints()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfTutorComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfTutorComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfTutorComplaints()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAcceptedComplaints()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAcceptedComplaints()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAcceptedComplaints()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAcceptedComplaints()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAcceptedComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAcceptedComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAcceptedComplaints()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAcceptedComplaints()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAcceptedComplaints()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAcceptedComplaints()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfComplaintResponses()).isEqualTo(6);
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(1).numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(2).numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(3).numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(4).numberOfComplaintResponses()).isEqualTo(6);
     }
 
     // Test
@@ -1462,32 +1464,32 @@ public class CourseTestService {
         Course testCourse = courseUtilService.addCourseWithExercisesAndSubmissions(userPrefix, suffix, 6, 4, 4, 2, false, 1, validModel);
 
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 2 submissions in 2 exercises. The second two only 2 in one exercise.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(8);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAssessments()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(8);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAssessments()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfTutorMoreFeedbackRequests()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfTutorMoreFeedbackRequests()).isEqualTo(4);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfTutorMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfTutorMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfTutorMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfTutorMoreFeedbackRequests()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfTutorMoreFeedbackRequests()).isEqualTo(4);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfTutorMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfTutorMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfTutorMoreFeedbackRequests()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfNotAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfNotAnsweredMoreFeedbackRequests()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfNotAnsweredMoreFeedbackRequests()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAnsweredMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAnsweredMoreFeedbackRequests()).isEqualTo(2);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAnsweredMoreFeedbackRequests()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAnsweredMoreFeedbackRequests()).isEqualTo(1);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAnsweredMoreFeedbackRequests()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAnsweredMoreFeedbackRequests()).isEqualTo(2);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAnsweredMoreFeedbackRequests()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAnsweredMoreFeedbackRequests()).isEqualTo(1);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAnsweredMoreFeedbackRequests()).isZero();
     }
 
     // Test
@@ -1506,33 +1508,33 @@ public class CourseTestService {
                 validModel);
 
         StatsForDashboardDTO stats = request.get("/api/courses/" + testCourse.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK, StatsForDashboardDTO.class);
-        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::getUserId)).toList();
+        var tutorLeaderboardEntries = stats.getTutorLeaderboardEntries().stream().sorted(Comparator.comparing(TutorLeaderboardDTO::userId)).toList();
 
         // the first two tutors did assess 5 submissions of 3 exercises. The rest two only 5 of two exercises.
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAssessments()).isEqualTo(3 * submissions);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAssessments()).isEqualTo(2 * submissions);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAssessments()).isEqualTo(2 * submissions);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAssessments()).isEqualTo(2 * submissions);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAssessments()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAssessments()).isEqualTo(3 * submissions);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAssessments()).isEqualTo(2 * submissions);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAssessments()).isEqualTo(2 * submissions);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAssessments()).isEqualTo(2 * submissions);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAssessments()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfTutorComplaints()).isEqualTo(3 * complaints);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfTutorComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfTutorComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfTutorComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfTutorComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfTutorComplaints()).isEqualTo(3 * complaints);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfTutorComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfTutorComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfTutorComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfTutorComplaints()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfAcceptedComplaints()).isEqualTo(3 * complaints);
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfAcceptedComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfAcceptedComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfAcceptedComplaints()).isEqualTo(2 * complaints);
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfAcceptedComplaints()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfAcceptedComplaints()).isEqualTo(3 * complaints);
+        assertThat(tutorLeaderboardEntries.get(1).numberOfAcceptedComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(2).numberOfAcceptedComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(3).numberOfAcceptedComplaints()).isEqualTo(2 * complaints);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfAcceptedComplaints()).isZero();
 
-        assertThat(tutorLeaderboardEntries.get(0).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(1).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(2).getNumberOfComplaintResponses()).isZero();
-        assertThat(tutorLeaderboardEntries.get(3).getNumberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.getFirst().numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(1).numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(2).numberOfComplaintResponses()).isZero();
+        assertThat(tutorLeaderboardEntries.get(3).numberOfComplaintResponses()).isZero();
         // 9 exercises, for each one there are 5 complaintResponses
-        assertThat(tutorLeaderboardEntries.get(4).getNumberOfComplaintResponses()).isEqualTo(exercises * complaints);
+        assertThat(tutorLeaderboardEntries.get(4).numberOfComplaintResponses()).isEqualTo(exercises * complaints);
     }
 
     // Test
@@ -1571,7 +1573,7 @@ public class CourseTestService {
             // Verify presence of exercises in mock courses
             // - Course 1 has 5 exercises in total, 4 exercises with relevant participations
             // - Course 2 has 0 exercises in total, 0 exercises with relevant participations
-            boolean isFirstCourse = courseOnly.getId().equals(testCourses.get(0).getId());
+            boolean isFirstCourse = courseOnly.getId().equals(testCourses.getFirst().getId());
             int numberOfExercises = isFirstCourse ? 5 : 0;
             assertThat(courseWithExercises.getExercises()).as("Course contains correct number of exercises").hasSize(numberOfExercises);
         }
@@ -1580,7 +1582,7 @@ public class CourseTestService {
     // Test
     public void testGetCategoriesInCourse() throws Exception {
         List<Course> testCourses = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, false, 0);
-        Course course1 = testCourses.get(0);
+        Course course1 = testCourses.getFirst();
         Course course2 = testCourses.get(1);
         List<String> categories1 = request.getList("/api/courses/" + course1.getId() + "/categories", HttpStatus.OK, String.class);
         assertThat(categories1).as("Correct categories in course1").containsExactlyInAnyOrder("Category", "Modeling", "Quiz", "File", "Text", "Programming");
@@ -1612,7 +1614,7 @@ public class CourseTestService {
         mockDelegate.mockAddUserToGroupInUserManagement(student, course1.getStudentGroupName(), false);
         mockDelegate.mockAddUserToGroupInUserManagement(student, course2.getStudentGroupName(), false);
 
-        Set<String> updatedGroups = request.postWithResponseBody("/api/courses/" + course1.getId() + "/enroll", null, Set.class, HttpStatus.OK);
+        Set<String> updatedGroups = request.postSetWithResponseBody("/api/courses/" + course1.getId() + "/enroll", null, String.class, HttpStatus.OK);
         assertThat(updatedGroups).as("User is enrolled in course").contains(course1.getStudentGroupName());
 
         List<AuditEvent> auditEvents = auditEventRepo.find("ab12cde", Instant.now().minusSeconds(20), Constants.ENROLL_IN_COURSE);
@@ -1667,11 +1669,11 @@ public class CourseTestService {
     }
 
     private void testUnenrollFromCourseSuccessfull(Course course) throws Exception {
-        Set<String> updatedGroups = request.postWithResponseBody("/api/courses/" + course.getId() + "/unenroll", null, Set.class, HttpStatus.OK);
+        Set<String> updatedGroups = request.postSetWithResponseBody("/api/courses/" + course.getId() + "/unenroll", null, String.class, HttpStatus.OK);
         assertThat(updatedGroups).as("User is not enrolled in course").doesNotContain(course.getStudentGroupName());
         List<AuditEvent> auditEvents = auditEventRepo.find(userPrefix + "student1", Instant.now().minusSeconds(20), Constants.UNENROLL_FROM_COURSE);
         assertThat(auditEvents).as("Audit Event for course unenrollment added").hasSize(1);
-        AuditEvent auditEvent = auditEvents.get(0);
+        AuditEvent auditEvent = auditEvents.getFirst();
         assertThat(auditEvent.getData()).as("Correct Event Data").containsEntry("course", course.getTitle());
     }
 
@@ -1709,15 +1711,15 @@ public class CourseTestService {
 
         // Get all students for course
         List<User> students = request.getList("/api/courses/" + course.getId() + "/students", HttpStatus.OK, User.class);
-        assertThat(students).as("All students in course found").hasSize(numberOfStudents);
+        assertThat(students).as("All students in course found").hasSize(NUMBER_OF_STUDENTS);
 
         // Get all tutors for course
         List<User> tutors = request.getList("/api/courses/" + course.getId() + "/tutors", HttpStatus.OK, User.class);
-        assertThat(tutors).as("All tutors in course found").hasSize(numberOfTutors);
+        assertThat(tutors).as("All tutors in course found").hasSize(NUMBER_OF_TUTORS);
 
         // Get all instructors for course
         List<User> instructors = request.getList("/api/courses/" + course.getId() + "/instructors", HttpStatus.OK, User.class);
-        assertThat(instructors).as("All instructors in course found").hasSize(numberOfInstructors);
+        assertThat(instructors).as("All instructors in course found").hasSize(NUMBER_OF_INSTRUCTORS);
     }
 
     /**
@@ -1775,7 +1777,7 @@ public class CourseTestService {
 
         // Get all editors for course
         List<User> editors = request.getList("/api/courses/" + course.getId() + "/editors", HttpStatus.OK, User.class);
-        assertThat(editors).as("All editors in course found").hasSize(numberOfEditors);
+        assertThat(editors).as("All editors in course found").hasSize(NUMBER_OF_EDITORS);
     }
 
     // Test
@@ -2001,6 +2003,7 @@ public class CourseTestService {
         return updatedCourse;
     }
 
+    // TODO: reactivate test as part of Quiz Tests
     public void testArchiveCourseWithQuizExercise(String userPrefix) throws Exception {
         var course = courseUtilService.createCourse();
         var quizSubmission = quizExerciseUtilService.addQuizExerciseToCourseWithParticipationAndSubmissionForUser(course, userPrefix + "student1", false);
@@ -2012,6 +2015,7 @@ public class CourseTestService {
         extractAndAssertContent(archivePath.orElseThrow(), quizSubmission);
     }
 
+    // TODO: reactivate test as part of Quiz Tests
     public void testArchiveCourseWithQuizExerciseCannotExportExerciseDetails() throws IOException {
         var course = courseUtilService.createCourse();
         var quizSubmission = quizExerciseUtilService.addQuizExerciseToCourseWithParticipationAndSubmissionForUser(course, userPrefix + "student1", false);
@@ -2021,6 +2025,7 @@ public class CourseTestService {
         extractAndAssertMissingContent(archivePath.orElseThrow(), quizSubmission, missingPathPredicate);
     }
 
+    // TODO: reactivate test as part of Quiz Tests
     public void testArchiveCourseWithQuizExerciseCannotExportDragAndDropSubmission() throws IOException {
         List<String> exportErrors = Collections.synchronizedList(new ArrayList<>());
         var course = courseUtilService.createCourse();
@@ -2034,6 +2039,7 @@ public class CourseTestService {
         }
     }
 
+    // TODO: reactivate test as part of Quiz Tests
     public void testArchiveCourseWithQuizExerciseCannotCreateParticipationDirectory() throws IOException {
         List<String> exportErrors = Collections.synchronizedList(new ArrayList<>());
         var course = courseUtilService.createCourse();
@@ -2046,6 +2052,7 @@ public class CourseTestService {
 
     }
 
+    // TODO: reactivate test as part of Quiz Tests
     public void testArchiveCourseWithQuizExerciseCannotExportMCOrSAAnswersSubmission(String fileName, String dynamicErrorMsg) throws IOException {
         List<String> exportErrors = Collections.synchronizedList(new ArrayList<>());
         var course = courseUtilService.createCourse();
@@ -2058,7 +2065,7 @@ public class CourseTestService {
             Predicate<Path> missingPathPredicate = path -> path.getFileName().toString().contains(fileName) && path.getFileName().toString().endsWith(".txt");
             extractAndAssertMissingContent(archivePath.orElseThrow(), quizSubmission, missingPathPredicate);
             assertThat(exportErrors).hasSize(1);
-            assertThat(exportErrors.get(0)).contains("Failed to export " + dynamicErrorMsg + " answers");
+            assertThat(exportErrors.getFirst()).contains("Failed to export " + dynamicErrorMsg + " answers");
         }
     }
 
@@ -2132,9 +2139,9 @@ public class CourseTestService {
     public void searchUsersInCourse_searchForAllTutors_shouldReturnAllTutorsAndEditors() throws Exception {
         Course course = createCourseForUserSearchTest();
         // Test: search for all (no login or name) tutors (tutors includes also editors)
-        var result = searchUsersTest(course, List.of("tutors"), Optional.empty(), numberOfTutors + numberOfEditors, true);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).hasSize(numberOfEditors);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(numberOfTutors);
+        var result = searchUsersTest(course, List.of("tutors"), Optional.empty(), NUMBER_OF_TUTORS + NUMBER_OF_EDITORS, true);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).hasSize(NUMBER_OF_EDITORS);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(NUMBER_OF_TUTORS);
     }
 
     /**
@@ -2143,8 +2150,8 @@ public class CourseTestService {
     public void searchUsersInCourse_searchForAllInstructor_shouldReturnAllInstructors() throws Exception {
         var course = createCourseForUserSearchTest();
         // Test: search for all (no login or name) instructors
-        var result = searchUsersTest(course, List.of("instructors"), Optional.empty(), numberOfInstructors, true);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).hasSize(numberOfInstructors);
+        var result = searchUsersTest(course, List.of("instructors"), Optional.empty(), NUMBER_OF_INSTRUCTORS, true);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).hasSize(NUMBER_OF_INSTRUCTORS);
     }
 
     /**
@@ -2172,8 +2179,8 @@ public class CourseTestService {
         var course = createCourseForUserSearchTest();
         // Test: Try to search for students with a long enough search term (at least 3 as students are included)
         // Note: -1 as student1 is the requesting user and will not be returned
-        var result = searchUsersTest(course, List.of("students"), Optional.of(userPrefix + "student"), numberOfStudents - 1, true);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsStudent)).hasSize(numberOfStudents - 1);
+        var result = searchUsersTest(course, List.of("students"), Optional.of(userPrefix + "student"), NUMBER_OF_STUDENTS - 1, true);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsStudent)).hasSize(NUMBER_OF_STUDENTS - 1);
     }
 
     /**
@@ -2182,10 +2189,10 @@ public class CourseTestService {
     public void searchUsersInCourse_searchForAllTutorsAndInstructors_shouldReturnAllTutorsEditorsAndInstructors() throws Exception {
         var course = createCourseForUserSearchTest();
         // Test: Try to search for all tutors (tutors includes also editors) and instructors
-        var result = searchUsersTest(course, List.of("tutors", "instructors"), Optional.empty(), numberOfTutors + numberOfEditors + numberOfInstructors, true);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).hasSize(numberOfEditors);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(numberOfTutors);
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).hasSize(numberOfInstructors);
+        var result = searchUsersTest(course, List.of("tutors", "instructors"), Optional.empty(), NUMBER_OF_TUTORS + NUMBER_OF_EDITORS + NUMBER_OF_INSTRUCTORS, true);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).hasSize(NUMBER_OF_EDITORS);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(NUMBER_OF_TUTORS);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).hasSize(NUMBER_OF_INSTRUCTORS);
     }
 
     /**
@@ -2194,9 +2201,9 @@ public class CourseTestService {
     public void searchUsersInCourse_searchForTutorsAndInstructors_shouldReturnUsersMatchingSearchTerm() throws Exception {
         var course = createCourseForUserSearchTest();
         // Test : Try to search for all tutors (tutors includes also editors) and instructors with search term
-        var result = searchUsersTest(course, List.of("tutors", "instructors"), Optional.of(userPrefix + "tutor"), numberOfTutors, true);
+        var result = searchUsersTest(course, List.of("tutors", "instructors"), Optional.of(userPrefix + "tutor"), NUMBER_OF_TUTORS, true);
         assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).isEmpty();
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(numberOfTutors);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(NUMBER_OF_TUTORS);
         assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).isEmpty();
     }
 
@@ -2218,9 +2225,9 @@ public class CourseTestService {
 
         // Test: Try to search or all students, tutors (tutors includes also editors)
         // and instructors with a long enough search term (at least 3 as students are included)
-        var result = searchUsersTest(course, List.of("students", "tutors", "instructors"), Optional.of(userPrefix + "tutor"), numberOfTutors, true);
+        var result = searchUsersTest(course, List.of("students", "tutors", "instructors"), Optional.of(userPrefix + "tutor"), NUMBER_OF_TUTORS, true);
         assertThat(result.stream().filter(UserPublicInfoDTO::getIsEditor)).isEmpty();
-        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(numberOfTutors);
+        assertThat(result.stream().filter(UserPublicInfoDTO::getIsTeachingAssistant)).hasSize(NUMBER_OF_TUTORS);
         assertThat(result.stream().filter(UserPublicInfoDTO::getIsInstructor)).isEmpty();
         assertThat(result.stream().filter(UserPublicInfoDTO::getIsStudent)).isEmpty();
     }
@@ -2235,7 +2242,7 @@ public class CourseTestService {
         queryParameter.add("loginOrName", userPrefix + "tutor");
         var result = request.getList("/api/courses/" + course.getId() + "/members/search", HttpStatus.OK, UserNameAndLoginDTO.class, queryParameter);
 
-        assertThat(result).hasSize(numberOfTutors);
+        assertThat(result).hasSize(NUMBER_OF_TUTORS);
         result.forEach(dto -> assertThat(dto.name().contains(userPrefix + "tutor")).isTrue());
     }
 
@@ -2250,7 +2257,7 @@ public class CourseTestService {
         var result = request.getList("/api/courses/" + course.getId() + "/members/search", HttpStatus.OK, UserNameAndLoginDTO.class, queryParameter);
 
         assertThat(result).hasSize(10);
-        assertThat(numberOfStudents + numberOfTutors + numberOfEditors + numberOfInstructors).isGreaterThan(10);
+        assertThat(NUMBER_OF_STUDENTS + NUMBER_OF_TUTORS + NUMBER_OF_EDITORS + NUMBER_OF_INSTRUCTORS).isGreaterThan(10);
     }
 
     /**
@@ -2289,6 +2296,7 @@ public class CourseTestService {
     }
 
     // Test
+    // TODO: reactivate test as part of Modeling Tests
     public void testArchiveCourseWithTestModelingAndFileUploadExercisesFailToExportModelingExercise() throws Exception {
         Course course = courseUtilService.createCourseWithTextModelingAndFileUploadExercisesAndSubmissions(userPrefix);
         Optional<ModelingExercise> modelingExercise = modelingExerciseRepository.findByCourseIdWithCategories(course.getId()).stream().findFirst();
@@ -2297,6 +2305,7 @@ public class CourseTestService {
     }
 
     // Test
+    // TODO: reactivate test as part of Modeling Tests
     public void testArchiveCourseWithTestModelingAndFileUploadExercisesFailToExportTextExercise() throws Exception {
         Course course = courseUtilService.createCourseWithTextModelingAndFileUploadExercisesAndSubmissions(userPrefix);
         Optional<TextExercise> textExercise = textExerciseRepository.findByCourseIdWithCategories(course.getId()).stream().findFirst();
@@ -2305,6 +2314,7 @@ public class CourseTestService {
     }
 
     // Test
+    // TODO: reactivate test as part of Modeling Tests
     public void testArchiveCourseWithTestModelingAndFileUploadExercisesFailToExportFileUploadExercise() throws Exception {
         Course course = courseUtilService.createCourseWithTextModelingAndFileUploadExercisesAndSubmissions(userPrefix);
         Optional<FileUploadExercise> fileUploadExercise = fileUploadExerciseRepository.findByCourseIdWithCategories(course.getId()).stream().findFirst();
@@ -2527,7 +2537,7 @@ public class CourseTestService {
     public void testGetAllCoursesForManagementOverview() throws Exception {
         // Add two courses, containing one not belonging to the instructor
         var testCourses = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, false, 0);
-        var instructorsCourse = testCourses.get(0);
+        var instructorsCourse = testCourses.getFirst();
         instructorsCourse.setInstructorGroupName("test-instructors");
         courseRepo.save(instructorsCourse);
         var nonInstructorsCourse = testCourses.get(1);
@@ -2554,7 +2564,7 @@ public class CourseTestService {
 
         // Add two courses, containing one not belonging to the instructor
         var testCourses = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, false, 0);
-        var instructorsCourse = testCourses.get(0);
+        var instructorsCourse = testCourses.getFirst();
         instructorsCourse.setInstructorGroupName("test-instructors");
         courseRepo.save(instructorsCourse);
         var nonInstructorsCourse = testCourses.get(1);
@@ -2667,16 +2677,16 @@ public class CourseTestService {
         // We only added one course, so expect one dto
         assertThat(courseDtos).hasSize(1);
 
-        Optional<CourseManagementOverviewStatisticsDTO> optionalCourseDTO = courseDtos.stream().filter(dto -> Objects.equals(dto.getCourseId(), instructorsCourse.getId()))
+        Optional<CourseManagementOverviewStatisticsDTO> optionalCourseDTO = courseDtos.stream().filter(dto -> Objects.equals(dto.courseId(), instructorsCourse.getId()))
                 .findFirst();
         assertThat(optionalCourseDTO).as("Active course was not filtered").isPresent();
         CourseManagementOverviewStatisticsDTO dto = optionalCourseDTO.orElseThrow();
 
-        assertThat(dto.getCourseId()).isEqualTo(instructorsCourse.getId());
-        assertThat(dto.getActiveStudents()).as("course was only active for 3 days").hasSize(1);
+        assertThat(dto.courseId()).isEqualTo(instructorsCourse.getId());
+        assertThat(dto.activeStudents()).as("course was only active for 3 days").hasSize(1);
 
         // Expect our three created exercises
-        var exerciseDTOS = dto.getExerciseDTOS();
+        var exerciseDTOS = dto.exerciseDTOS();
         assertThat(exerciseDTOS).hasSize(3);
 
         // Get the statistics of the exercise with a passed assessment due date
@@ -2760,14 +2770,14 @@ public class CourseTestService {
         // We only added one course, so expect one dto
         assertThat(courseDtos).hasSize(1);
 
-        var optionalCourseDTO = courseDtos.stream().filter(dto -> Objects.equals(dto.getCourseId(), instructorsCourse.getId())).findFirst();
+        var optionalCourseDTO = courseDtos.stream().filter(dto -> Objects.equals(dto.courseId(), instructorsCourse.getId())).findFirst();
         assertThat(optionalCourseDTO).as("Active course was not filtered").isPresent();
         CourseManagementOverviewStatisticsDTO dto = optionalCourseDTO.orElseThrow();
 
-        assertThat(dto.getCourseId()).isEqualTo(instructorsCourse.getId());
+        assertThat(dto.courseId()).isEqualTo(instructorsCourse.getId());
 
         // Only five exercises should be returned
-        var exerciseDTOS = dto.getExerciseDTOS();
+        var exerciseDTOS = dto.exerciseDTOS();
         assertThat(exerciseDTOS).hasSize(5);
 
         // The one specific exercise should not be included
@@ -2815,7 +2825,7 @@ public class CourseTestService {
         ZonedDateTime now = ZonedDateTime.now();
         // add courses with exercises
         var courses = courseUtilService.createCoursesWithExercisesAndLectures(userPrefix, true, 5);
-        var course1 = courses.get(0);
+        var course1 = courses.getFirst();
         var course2 = courses.get(1);
         course1.setStartDate(now.minusWeeks(2));
         course1.setStudentGroupName(userPrefix + "student");
@@ -2919,10 +2929,7 @@ public class CourseTestService {
         feedback5.setReference(TextExerciseFactory.generateTextBlock(0, 5, "test5").getId());
         var feedbackListForComplaint = Arrays.asList(feedback1, feedback2, feedback3, feedback4, feedback5);
 
-        var assessmentUpdate = new TextAssessmentUpdateDTO();
-        assessmentUpdate.feedbacks(feedbackListForComplaint).complaintResponse(complaintResponse);
-        assessmentUpdate.setTextBlocks(new HashSet<>());
-
+        var assessmentUpdate = new TextAssessmentUpdateDTO(feedbackListForComplaint, complaintResponse, null, new HashSet<>());
         request.putWithResponseBody("/api/participations/" + result1.getSubmission().getParticipation().getId() + "/submissions/" + result1.getSubmission().getId()
                 + "/text-assessment-after-complaint", assessmentUpdate, Result.class, HttpStatus.OK);
 
@@ -2938,10 +2945,7 @@ public class CourseTestService {
         feedbackResponse.setResponseText("accepted");
         var feedbackListForMoreFeedback = Arrays.asList(feedback1, feedback2, feedback3, feedback4);
 
-        var feedbackUpdate = new TextAssessmentUpdateDTO();
-        feedbackUpdate.feedbacks(feedbackListForMoreFeedback).complaintResponse(feedbackResponse);
-        feedbackUpdate.setTextBlocks(new HashSet<>());
-
+        final var feedbackUpdate = new TextAssessmentUpdateDTO(feedbackListForMoreFeedback, feedbackResponse, null, new HashSet<>());
         request.putWithResponseBody("/api/participations/" + result2.getSubmission().getParticipation().getId() + "/submissions/" + result2.getSubmission().getId()
                 + "/text-assessment-after-complaint", feedbackUpdate, Result.class, HttpStatus.OK);
 
@@ -3161,11 +3165,10 @@ public class CourseTestService {
         Course createdCourse = objectMapper.readValue(result.getResponse().getContentAsString(), Course.class);
         String courseId = createdCourse.getId().toString();
 
-        // without onlinecourseconfiguration
-        OnlineCourseConfiguration ocConfiguration = null;
-        request.putWithResponseBody(getUpdateOnlineCourseConfigurationPath(courseId), ocConfiguration, OnlineCourseConfiguration.class, HttpStatus.BAD_REQUEST);
+        // without online course configuration
+        request.putWithResponseBody(getUpdateOnlineCourseConfigurationPath(courseId), null, OnlineCourseConfiguration.class, HttpStatus.BAD_REQUEST);
 
-        ocConfiguration = createdCourse.getOnlineCourseConfiguration();
+        var ocConfiguration = createdCourse.getOnlineCourseConfiguration();
         // with invalid user prefix - not matching regex
         CourseFactory.updateOnlineCourseConfiguration(ocConfiguration, "with space", null, "10000");
         request.putWithResponseBody(getUpdateOnlineCourseConfigurationPath(courseId), ocConfiguration, OnlineCourseConfiguration.class, HttpStatus.BAD_REQUEST);
@@ -3251,13 +3254,13 @@ public class CourseTestService {
         String clientId = ocConfiguration.getLtiPlatformConfiguration().getRegistrationId();
 
         String jsonResponse = request.get("/api/courses/for-lti-dashboard?clientId=" + clientId, HttpStatus.OK, String.class);
-        List<OnlineCourseDTO> receivedCourseForDashboard = objectMapper.readValue(jsonResponse, new TypeReference<List<OnlineCourseDTO>>() {
+        List<OnlineCourseDTO> receivedCourseForDashboard = objectMapper.readValue(jsonResponse, new TypeReference<>() {
             // This empty block is necessary to provide type information for JSON deserialization
         });
 
         assertThat(receivedCourseForDashboard).hasSize(1);
 
-        OnlineCourseDTO dto = receivedCourseForDashboard.get(0);
+        OnlineCourseDTO dto = receivedCourseForDashboard.getFirst();
         assertThat(dto.id()).isEqualTo(course.getId());
         assertThat(dto.title()).isEqualTo(course.getTitle());
         assertThat(dto.shortName()).isEqualTo(course.getShortName());
@@ -3342,6 +3345,7 @@ public class CourseTestService {
     }
 
     // Test
+    // TODO: reactivate test as part of Learning Paths
     public void testUpdateCourseEnableLearningPaths() throws Exception {
         Course course = CourseFactory.generateCourse(null, ZonedDateTime.now().minusDays(1), ZonedDateTime.now().plusDays(1), new HashSet<>(), "editlearningpathenabledcourse",
                 "tutor", "editor", "instructor");
